--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,28 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
 
-# testing
-/coverage
+# Local History for Visual Studio Code
+.history/
 
-# production
-/build
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
 
-# misc
+# Support for Project snippet scope
+!.vscode/*.code-snippets
+
+# nodejs
+node_modules
+dist/*
+build/*
+*.log
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
